@@ -1,3 +1,8 @@
+1999-06-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Discrete2d.m ([Discrete2d hdf5In{Create}:]): Handle compound
+	data types.
+	
 1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
